--- a/style.css
+++ b/style.css
@@ -2,12 +2,33 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.background-image {
+    background-image: url(images/donation11.jpg);
+    background-size: 2000px;
+
+}
+
+.tk-amount {
+    padding: 50px;
+    padding-left: 40%;
+    width: 500px
+}
+
+.Our-Donate-Plan {
+    width: 10px%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    background-color: aqua;
+}
+
 h1 {
     font-size: 50px;
 }
 
-section {
+.flxible-containe {
     display: flex;
+    margin-bottom: 100px;
 }
 
 .half-width {
@@ -25,4 +46,20 @@ section {
     background-color: brown;
     padding: 10px 40px;
     border-radius: 10px;
+}
+
+h1 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
+
+footer {
+    background-color: rosybrown;
+}
+
+.Adjective {
+    padding-left: 45%;
 }
